<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
<ProgressBar 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    />
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
	android:text="@string/textLoading"
    android:textSize="18sp"
    android:textStyle="bold"
    />
<ProgressBar
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="?android:attr/progressBarStyleHorizontal"
    android:id="@+id/pb"
    />
<SeekBar
    android:id="@+id/sk"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    />
<TextView
    android:id="@+id/tvloading"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
	android:text="@string/textLoading0"
    android:textSize="18sp"
    android:textStyle="bold"
    />

<Button android:id="@+id/btnthi1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
	android:text="@string/thirdBtnSim"
    />
<TextView
    android:id="@+id/tvlog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
	android:text="@string/thirdDebugLog"
    android:textSize="18sp"
    android:textStyle="bold"
    />
<Button android:id="@+id/btnthi2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
	android:text="@string/btn2"
    />
<Button android:id="@+id/btnthi3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
	android:text="@string/btn4"
    />
</LinearLayout>

